# plainapp-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml  releases-to-discord.yml
examples/: dns_timing.rs
src/: api.rs  config.rs  crypto.rs  main.rs  mdns.rs
