[package]
name = "plainapp-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for querying and managing PlainApp data via its GraphQL API"
license = "MIT"

[[bin]]
name = "plainapp-cli"
path = "src/main.rs"

[dependencies]
# XChaCha20-Poly1305 — matches the encryption used by the PlainApp server
chacha20poly1305 = "0.10"
# Blocking HTTPS client with rustls (needed for self-signed TLS certs)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
panic       = "abort"
